fixed modal scrollbar for mobile also

--- a/assets/scss/shared-ui/_modals.scss
+++ b/assets/scss/shared-ui/_modals.scss
@@ -31,6 +31,10 @@
 			left: map-get($wordpress, adminmenu);
 			right: #{($scrollbar--width)};
 
+			@include media(max-width, md) {
+				right: 0;
+			}
+
 			&:hover {
 				cursor: pointer;
 				outline: none;
